task_boy/src/css/styles.css
/* ... */
#dialog-backdrop {
  backdrop-filter: brightness(50%);
  position: fixed;
  inset: 0;
}

main {
  flex-grow: 1;
  height: 100dvh;
  display: grid;
  grid-template-rows: min-content minmax(0, 1fr);

  #main-header {
    position: relative;
    display: flex;
    justify-content: center;
    padding-block: 0.5rem;
    background: hsl(var(--primary));
    color: var(--bg);

    button {
      position: absolute;
      right: 2rem;
      color: var(--gb);
      border-color: var(--gb);
      width: 120px;
      text-align: center;
    }
  }
  .main-content {
    display: grid;
    grid-template-rows: repeat(2, minmax(0, min-content));
  }
  section {
    position: relative;

    &#upcoming {
      display: grid;
      grid-template-rows: min-content minmax(0, 1fr);
    }

    .msg {
      text-align: center;
      padding-block: 2rem 1rem;
    }
  }
}

.task-list-container {
  display: flex;
  justify-content: center;
  padding-inline: 2rem;
  max-height: 100%;
  overflow-y: auto;

  ul {
    list-style: none;
    padding: 1rem 0 2rem 0;
    overflow: clip;
  }

  .toggle-complete {
    margin-top: 0.45rem;
  }

  .btn-container {
    padding-top: 0.6rem;
    display: flex;
    gap: 1rem;
  }
  .task {
    width: 350px;
    display: flex;
    gap: 2rem;
    padding-block: 1rem;
    padding-left: 2rem;
    border-bottom: solid 1px;

    &:hover {
      .delete-task-btn {
        visibility: visible;
      }
    }
    .task-details-btn {
      border: none;
      padding: 0;
    }
    h3 {
      text-align: start;
      font-size: 1.2rem;
    }
  }

  & li:last-child .task {
    border-bottom: none;
  }

  .task-body {
    flex-grow: 1;
  }
  .details {
    position: relative;
    display: flex;
    justify-content: space-between;
    line-height: 1.1;
  }

  .priority {
    min-width: 20px;
    text-align: center;
  }
  .overdue,
  .critical,
  .high {
    background: hsl(var(--primary));
    color: var(--bg);
    padding-inline: 0.25rem;
  }

  .low > span {
    font-size: 0.7rem;
  }

  .completed {
    padding-block: 0.2rem;

    .btn-container {
      display: none;
    }

    .title {
      text-decoration-thickness: 2px;
      text-decoration-inset: -0.5rem;
    }
    .details {
      display: none;
    }
  }
}

#delete-quest-dialog {
  .content {
    padding: 1rem;
  }
  .btn-container {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding-top: 1rem;
  }
}
@keyframes scanline {
  0% {
    bottom: 100%;
  }
  90% {
    bottom: 100%;
  }
  100% {
    bottom: -20%;
  }
}

dialog#credits-dialog {
  padding: 1rem;

  & > div {
    display: flex;
    flex-direction: column;
    gap: 2rem;
  }

  h1 {
    display: flex;
    font-size: 2.5rem;
    justify-content: center;
    padding-bottom: 1rem;

    .sans {
      margin-top: 0.5rem;
    }
  }

  h2 {
    padding: 0;
    border: none;
  }

  a {
    color: inherit;
  }

  #author {
    align-self: end;
  }
}

.tooltip-container {
  position: relative;
}
[role="tooltip"] {
  visibility: hidden;
  position: absolute;
  top: 1.2rem;
  left: 1.2rem;
  background: var(--bg);
  color: hsl(var(--primary));
  padding: 0.5rem;
  border: solid 1.5px hsl(var(--primary));
}
[aria-describedby]:hover + [role="tooltip"],
[aria-describedby]:focus + [role="tooltip"] {
  visibility: visible;
  z-index: 100;
  transition: visibility 0s 0.5s;
  width: max-content;
}

@keyframes flashing-outline {
  from {
    outline-color: transparent;
  }

  to {
    outline-color: hsl(var(--primary));
  }
}
@media (width < 40rem) {
  #app {
    display: none;
  }
  #small-screen-fallback {
    display: flex !important;
    height: 100%;
    justify-content: center;
    padding-block: 5rem;
    padding-inline: 1rem;

    & > div {
      display: flex;
      flex-direction: column;
      gap: 1rem;
    }
    h1 {
      font-family: brush;
      font-size: 3rem;
    }
  }
}

